Minimal UI updates and API tweaks  (#1)
* ui can now create crawls and reacts to no crawls in redis etc
* style cleanup and formatting

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>UI</title>
+    <title>HI</title>
 </head>
 <body>
 <div id="mount"></div>
+<script src="app.js"></script>
 </body>
 </html>
